[package]
name = "raton"
authors = [ "Finn Bear" ]
version = "0.1.0-alpha.9"
edition = "2021"
rust-version = "1.68"
license = "MIT OR Apache-2.0"
description = "ratón is a tiny, modular, embeddable scripting language"
keywords = ["scripting", "scripting-engine", "scripting-language"]
categories = ["parser-implementations"]
repository = "https://github.com/finnbear/raton"
exclude = ["fuzz/"]

[features]
default = [
    "bool_type", "i32_type", "f32_type", "string_type",
    "extern_value_type",
    "if_expression", "method_call_expression", "while_loop",
    "single_line_comment", "multi_line_comment",
]
bool_type = []
i32_type = []
f32_type = []
string_type = []
extern_value_type = []
if_expression = ["bool_type"]
method_call_expression = []
while_loop = ["bool_type"]
single_line_comment = []
multi_line_comment = []

[dependencies]
nom = "=8.0.0"
nom-language = "=0.1.0"
thiserror = "=2.0.17"
hashbrown = { version = "=0.16.0", features = ["equivalent", "default-hasher", "raw-entry"], default-features = false }
serde = { version = "1", features = ["std", "derive"], default-features = false, optional = true }
bitcode = { version = "0", features = ["std", "derive"], default-features = false, optional = true }
arbitrary = { version = "1", features = ["derive"], optional = true }
nom_locate = "5.0.0"
nom-supreme = { git="https://github.com/stevehayles/nom-supreme.git" }
miette = { version = "7.2.0", features = ["fancy"] }
